# ridi-router

./: .gitignore  Cargo.toml  README.md  cspell.json  default.nix  docker-compose.yml  justfile
.github/workflows/: build.yaml  build.yml  cache.yaml  main-protection.yaml  release.yaml  release.yml
.helix/: languages.toml
rule-examples/: rules-avoid-unpaved.json  rules-default.json  rules-prefer-unpaved.json  schema.json
src/: cli.rs  debug_writer.rs  gps_coords_hash_map.rs  gps_hash.rs  gps_utils.rs  gpx_writer.rs  hints.rs  ipc_handler.rs  main.rs  map_data_cache.rs  map_data_graph.rs  osm.rs  osm_data_reader.rs  osm_json_parser.rs  result_writer.rs  route_creator.rs  router_mode.rs  router_runner.rs  test_data.rs  test_utils.rs
src/debug/: mod.rs  writer.rs
src/debug/viewer/: mod.rs  viewer.html  viewer.js
src/debug/viewer/ui/: api-types.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.json  viewer.html  viewer.js  viewer.types.ts  vite.config.ts
src/debug/viewer/ui/src/: api-types.ts  data-table.ts  main.ts  types.ts
src/debug/viewer/ui/src/components/: pagination.ts
src/debug/viewer/ui/src/styles/: table.ts
src/map_data/: debug_writer.rs  graph.rs  line.rs  mod.rs  osm.rs  point.rs  proximity.rs  rule.rs  way.rs
src/osm_data/: data_reader.rs  json_parser.rs  json_reader.rs  mod.rs  pbf_area_reader.rs  pbf_reader.rs
src/route/: mod.rs  navigator.rs  walker.rs  weights.rs
src/router/: clustering.rs  generator.rs  itinerary.rs  mod.rs  navigator.rs  rules.rs  walker.rs  weights.rs
src/router/route/: mod.rs  score.rs  segment.rs  segment_list.rs
test-data/: sigulda-100.json
