[package]
name = "ridi-router"
version = "0.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = { version = "4.5.9", features = ["derive"] }
csv = "1.3.1"
duckdb = "1.1.1"
geo = "0.29.3"
gpx = "0.10.0"
hdbscan = "0.9.0"
interprocess = "2.2.1"
# json-tools = "1.1.2"
json-tools = { git = "https://github.com/tomsjansons/json-tools.git", branch = "value-pairs" }
osmpbfreader = "0.16.1"
rayon = "1.10.0"
serde = { version = "1.0.201", features = ["derive"] }
serde_derive = "1.0.201"
serde_json = "1.0.117"
smartstring = "1.0.1"
thiserror = "2.0.9"
tiny_http = "0.12.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }

[dev-dependencies]
rusty-fork = "0.3.0"
