[package]
name = "ridi-router"
version = "0.6.18"
edition = "2021"

[profile.release]
codegen-units = 1
lto = true

[profile.dev]
opt-level = 3

[features]
default = []
debug-viewer = ["dep:duckdb", "dep:qstring", "dep:sql-builder", "dep:tiny_http"]
rule-schema-writer = []

[dependencies]
anyhow = "1.0.95"
bincode = "1.3.3"
clap = { version = "4.5.9", features = ["derive"] }
csv = "1.3.1"
derive-name = "1.1.0"
duckdb = { version = "1.1.1", features = ["bundled"] , optional = true }
geo = "0.29.3"
gpx = "0.10.0"
hdbscan = "0.9.0"
include_directory = "0.1.1"
interprocess = "2.2.1"
json-tools = "1.1.3"
osmpbfreader = "0.16.1"
qstring = { version = "0.7.2", optional = true }
rayon = "1.10.0"
schemars = "0.8.21"
serde = { version = "1.0.201", features = ["derive"] }
serde_derive = "1.0.201"
serde_json = "1.0.117"
sha2 = "0.10.8"
smartstring = "1.0.1"
sql-builder = { version = "3.1.1", optional = true }
struct-field-names-as-array = "0.3.0"
thiserror = "2.0.11"
tiny_http = { version = "0.12.0", optional = true }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
typeshare = { version = "1.0.4", default-features = false }

[dev-dependencies]
rusty-fork = "0.3.0"

[build-dependencies]
static_vcruntime = "2.0"
